--- a/train/member/src/main/resources/application.properties
+++ b/train/member/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 server.port=8081
 server.servlet.context-path=/member
 spring.application.name=member
+# 数据库连接
+spring.datasource.url=jdbc:mysql://localhost/train_member?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=train_member
+spring.datasource.password=MQa12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# mybatis xml路径
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
+logging.level.com.atluofu.train.member.mapper=trace
