--- a/train/gateway/src/main/resources/application.yml
+++ b/train/gateway/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 #yml配置
 logging:
   file:
-    path: G:/log/${spring.application.name}
+    path: ./log/${spring.application.name}
   config: classpath:log/logback-spring.xml
   level:
     root: info
