--- a/train/member/src/main/resources/application.yml
+++ b/train/member/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 #yml配置
 logging:
   file:
-    path: G:/log/${spring.application.name}
+    path: ./log/${spring.application.name}
   config: classpath:log/logback-spring.xml
   level:
     root: info
