--- a/train/gateway/src/main/resources/application.yml
+++ b/train/gateway/src/main/resources/application.yml
@@ -1,13 +1,21 @@
 spring:
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          ["/**"]:
+            allowedOrigins: "*"
+            allowedMethods: "*"
+            allowedHeaders: "*"
+            allowCredentials: true
+            maxAge: 3600
       routes:
         - id: member
           uri: http://127.0.0.1:8081
           predicates:
             - Path=/member/**
 
-#yml配置
+
 logging:
   file:
     path: ./log/${spring.application.name}
