--- a/train/gateway/src/main/resources/application.properties
+++ b/train/gateway/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 server.port=8080
 spring.application.name=gateway
+
+# 允许请求来源
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOriginPatterns=*
+# 允许携带的头信息
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
+# 允许的请求方式
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=*
+# 是否允许携带cookie
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+# 跨域检测的有效期，会发起一个OPTION请求
+spring.cloud.gateway.globalcors.cors-configurations.[/**].maxAge=3600
