--- a/train/member/src/main/resources/application.properties
+++ b/train/member/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/member
 spring.application.name=member
 # 数据库连接
 spring.datasource.url=jdbc:mysql://localhost/train_member?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=train_member
+spring.datasource.username=root
 spring.datasource.password=MQa12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis xml路径
