--- a/train/business/pom.xml
+++ b/train/business/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>top.atluofu.train</groupId>
+    <groupId>top.atluofu</groupId>
     <artifactId>business</artifactId>
 
     <properties>
