--- a/train/generator/pom.xml
+++ b/train/generator/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>member</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>top.atluofu</groupId>
+            <artifactId>business</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
