--- a/train/business/src/main/resources/application.properties
+++ b/train/business/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=MQa12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis xml路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
-logging.level.com.atluofu.train.member.mapper=trace
+logging.level.com.atluofu.train.business.mapper=trace
