<feature>(<pr>): <train be>
blog
  - batch job & db

--- a/train/batch/pom.xml
+++ b/train/batch/pom.xml
@@ -22,6 +22,10 @@
             <groupId>top.atluofu</groupId>
             <artifactId>common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
 
 
         <dependency>
