<feature>(<pr>): <train be>
blog
  - nacos

--- a/train/business/src/main/resources/application.properties
+++ b/train/business/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8082
 server.servlet.context-path=/business
 spring.application.name=business
+spring.profiles.active=dev
+
 # 数据库连接
 spring.datasource.url=jdbc:mysql://localhost/train_business?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
@@ -9,3 +11,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis xml路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 logging.level.com.atluofu.train.business.mapper=trace
+
+## nacos server地址
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+## 配置中心文件后缀，默认properties
+spring.cloud.nacos.config.file-extension=properties
+## nacos命名空间
+spring.cloud.nacos.config.namespace=train
+
+## nacos server注册中心地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.namespace=train
