--- a/train/batch/src/main/resources/application.properties
+++ b/train/batch/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis xml路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 logging.level.com.atluofu.train.batch.mapper=trace
+
+## nacos server地址
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+## 配置中心文件后缀，默认properties
+spring.cloud.nacos.config.file-extension=properties
+## nacos命名空间
+spring.cloud.nacos.config.namespace=train
+
+## nacos server注册中心地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.namespace=train
