--- a/train/gateway/src/main/resources/application.yml
+++ b/train/gateway/src/main/resources/application.yml
@@ -3,15 +3,18 @@ spring:
     gateway:
       routes:
         - id: member
-          uri: http://127.0.0.1:8081
+#          uri: http://127.0.0.1:8081
+          uri: lb://member
           predicates:
             - Path=/member/**
         - id: business
-          uri: http://127.0.0.1:8082
+#          uri: http://127.0.0.1:8082
+          uri: lb://business
           predicates:
             - Path=/business/**
         - id: batch
-          uri: http://127.0.0.1:8083
+#          uri: http://127.0.0.1:8083
+          uri: lb://batch
           predicates:
             - Path=/batch/**
 
