--- a/train/gateway/src/main/resources/application.yml
+++ b/train/gateway/src/main/resources/application.yml
@@ -1,5 +1,15 @@
+server:
+  port: 8080
+
 spring:
+  application:
+    name: gateway
   cloud:
+    nacos:
+      server-addr: 127.0.0.1:8848
+      namespace: train
+      config:
+        file-extension: yml
     gateway:
       routes:
         - id: member
